# rival3

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
infra/: main.rkt  nightly.sh  profile.js  smoke-test.rkt  time.rkt
rival-ffi/: Cargo.toml  build.rs  cbindgen.toml
rival-ffi/include/: rival.h
rival-ffi/src/: lib.rs  machine.rs  profile.rs
rival3-ffi/: Cargo.toml  cbindgen.toml
rival3-ffi/include/: rival.h
rival3-ffi/src/: discretization.rs  expr.rs  hints.rs  lib.rs  machine.rs  profile.rs
rival3-racket/: info.rkt  main.rkt  ops.rkt
rival3-racket/scribblings/: eval.scrbl  profile.scrbl  rival.scrbl  rival3.scrbl
src/: lib.rs  mpfr.rs  profile.rs
src/eval/: execute.rs  instructions.rs  machine.rs  macros.rs  mod.rs  ops.rs  profile.rs  run.rs
src/eval/adjust/: mod.rs  path_reduction.rs  precision.rs
src/interval/: arithmetic.rs  boolean.rs  constants.rs  core.rs  fmod.rs  mod.rs  pow.rs  trig.rs  value.rs
