[package]
name = "rival"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
description = "Real Computation via Interval Arithmetic"
repository = "https://github.com/herbie-fp/rival3"
readme = "README.md"

[lib]
name = "rival"
path = "src/lib.rs"

[[bin]]
name = "rival-cli"
path = "src/bin/main.rs"

[dependencies]
rug = { version = "1.28", features = ["float"] }
gmp-mpfr-sys = "1.6"
rand = "0.9"
indexmap = "2.12"
# TODO: remove
itertools = "0.14.0"
thiserror = "1"
# todo: make bin dependency
ascii_table = "4.0"

[profile.release]
lto = true
